<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvThirdFrag"
        />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/goto2ndfragment"
    android:id="@+id/btn3rdBack"
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotofirst"
        android:id="@+id/btnBackToFirst"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotomain"
        android:id="@+id/btnBackToMain"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvname3rd"
        android:hint="Name"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvrollno3rd"
        android:hint="Rollno"
        android:layout_marginStart="30sp"
        android:layout_marginTop="20sp"
        />


</LinearLayout>